# plutarch

./: flake.nix  plutarch.cabal
Plutarch/: Lift.hs
Plutarch/Api/V1/: AssocMap.hs  Value.hs
docs/: TYPES.md
examples/Examples/: ConstrData.hs
plutarch-extra/: plutarch-extra.cabal
plutarch-extra/Plutarch/: ListUtils.hs  These.hs
plutarch-extra/Plutarch/Api/V1/: Extra.hs  These.hs
plutarch-extra/Plutarch/Categories/: Extra.hs
plutarch-extra/Plutarch/Extra/: Api.hs  List.hs  TermCont.hs
plutarch-extra/Plutarch/Integer/: Extra.hs
plutarch-extra/Plutarch/Map/: Extra.hs
plutarch-extra/Plutarch/Maybe/: Extra.hs
plutarch-extra/Plutarch/State/: Extra.hs
plutarch-extra/Plutarch/Trace/: Extra.hs
plutarch-numeric/: new-hierarchy.md
plutarch-numeric/src/Plutarch/: Numeric.hs
plutarch-numeric/src/Plutarch/Numeric/: Additive.hs  Combination.hs  Fractional.hs  Multiplicative.hs  NZInteger.hs  NZNatural.hs  Natural.hs  Ratio.hs
plutarch-safemoney/: README.md  plutarch-safemoney.cabal
plutarch-safemoney/src/Plutarch/: SafeMoney.hs
plutarch-safemoney/src/Plutarch/SafeMoney/: Exchange.hs  Tagged.hs
plutarch-test/: README.md
