cabal-version: 2.4
name:          plutarch-extra
version:       1.1.0

common c
  default-language:   Haskell2010
  default-extensions:
    NoStarIsType
    BangPatterns
    BinaryLiterals
    ConstrainedClassMethods
    ConstraintKinds
    DataKinds
    DeriveAnyClass
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    DoAndIfThenElse
    EmptyCase
    EmptyDataDecls
    EmptyDataDeriving
    ExistentialQuantification
    ExplicitForAll
    FlexibleContexts
    FlexibleInstances
    ForeignFunctionInterface
    GADTSyntax
    GeneralisedNewtypeDeriving
    HexFloatLiterals
    ImplicitPrelude
    InstanceSigs
    KindSignatures
    LambdaCase
    MonomorphismRestriction
    MultiParamTypeClasses
    NamedFieldPuns
    NamedWildCards
    NumericUnderscores
    OverloadedStrings
    PartialTypeSignatures
    PatternGuards
    PolyKinds
    PostfixOperators
    RankNTypes
    RelaxedPolyRec
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    TraditionalRecordSyntax
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    TypeSynonymInstances
    ViewPatterns
    OverloadedRecordDot
    QualifiedDo

  ghc-options:
    -Wall -Wcompat -Wincomplete-uni-patterns -Wno-unused-do-bind
    -Wno-partial-type-signatures -Wmissing-export-lists -Werror
    -Wincomplete-record-updates -Wmissing-deriving-strategies
    -Wno-name-shadowing -Wunused-foralls -fprint-explicit-foralls
    -fprint-explicit-kinds

common deps
  build-depends:
    , base
    , plutarch

library plutarch-preludes
  import:          c, deps
  hs-source-dirs:  preludes
  exposed-modules: PPrelude

library
  import:          c, deps
  mixins:
    base hiding (Prelude),
    plutarch-preludes (PPrelude as Prelude)

  exposed-modules:
    Plutarch.Api.V1.Extra
    Plutarch.Categories.Extra
    Plutarch.Extra
    Plutarch.ListUtils
    Plutarch.Map.Extra
    Plutarch.Maybe.Extra
    Plutarch.State.Extra
    Plutarch.Trace.Extra

  build-depends:
    , base
    , generics-sop
    , plutarch
    , plutarch-preludes
    , plutus-core
    , plutus-ledger-api
    , plutus-tx
    , text

-- other-modules:
